made arrows on gallery page closer together, and little hack so they align correctly (the images are not aligned so had to relatively position one of them

--- a/myapp/static/myapp/css/gallery.css
+++ b/myapp/static/myapp/css/gallery.css
@@ -14,9 +14,15 @@
 
 #next {
   margin: 10px;
+  margin-left: 30px;
+  position: relative;
+  top: 2px;
+  
 }
 #previous {
   margin: 10px;
+  margin-right: 30px;
+  position: relative;
 }
 
 
